--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -33,7 +33,7 @@ Median of steps taken per day : `r median(x)`
 ```{r}
 intv <- as.factor(activity.complete.df[, "interval"])
 intv.mean <- tapply(activity.complete.df[, "steps"], intv, mean)
-plot(x = unique(intv), y = intv.mean, type = "l")
+plot(x = unique(intv), y = intv.mean, type = "l", cex = 2)
 ```
 
 Interval with the highest average number of steps : `r rownames(intv.mean)[which(intv.mean == max(intv.mean))]`
@@ -74,15 +74,17 @@ daytype <- function(date.in) {
 activity.df <- cbind(activity.df, "datetype" = sapply(activity.df[, "date"], daytype))
 l <- split(activity.df, activity.df[, "datetype"])
 
+# Calculate weekday average of steps
+weekday.mean <- tapply(l[["weekday"]][, "steps"], as.factor(l[["weekday"]][, "interval"]), mean)
+# Calculate weekend average of steps
+weekend.mean <- tapply(l[["weekend"]][, "steps"], as.factor(l[["weekend"]][, "interval"]), mean)  
 
-  
-    x <- as.factor(l[[1]][, "interval"])
-    y <- tapply(l[[1]][, "steps"], x, mean)
+u <- data.frame("interval" = rownames(weekend.mean), "mean.steps" = as.vector(weekend.mean), "datetype" = "weekend")
+v <- data.frame("interval" = rownames(weekday.mean), "mean.steps" = as.vector(weekday.mean), "datetype" = "weekday")
+alldays.df <- rbind(u, v)
 
 
 library(lattice)
 
-
-f <- factor(activity.df[, "datetype"], labels = c("weekend", "weekday"))
-xyplot(y ~ unique(x) | f, layout = c(1, 2), type = "l", xlab = "Interval", ylab = "Steps")
+xyplot(mean.steps ~ interval | datetype, data = alldays.df, layout = c(1, 2), type = "l", xlab = "Interval", ylab = "Steps")
 ```
